<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="clear">C</string>
    <string name="enter">=</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="advance_with_history">Advance - with history</string>
    <string name="standard_no_history">STANDARD - NO HISTORY</string>
</resources>